# Minimum CMake
cmake_minimum_required(VERSION 2.8,9)
project(learncpp)
enable_testing()

#Project Compiler Arguments
SET(PROJECT_COMPILER_FLAGS "-fprofile-arcs -ftest-coverage ")
SET(PROJECT_LINK_FLAGS    "-lgcov")
add_compile_options( -std=c++17 )

file(GLOB APP_SOURCES *.c**)
foreach(testsourcefile ${APP_SOURCES})
  get_filename_component(testname ${testsourcefile} NAME_WE)
  get_filename_component(baseDir ${testsourcefile} DIRECTORY)
  message( ${testname} )
  set( TEST_IN  ${baseDir}/${testname}.in)
  set( TEST_EXE  ${baseDir}/${testname})
  message( ${TEST_IN} )
  message( ${TEST_EXE} )
  add_executable(${testname} ${testsourcefile})
  if ( EXISTS ${TEST_IN})
      add_test( NAME ${testname} COMMAND "${TEST_EXE} < ${TEST_IN}" )
  else()
      add_test( NAME ${testname} COMMAND "${TEST_EXE}" )
  endif()
endforeach(testsourcefile ${APP_SOURCES})
