# Minimum CMake
cmake_minimum_required(VERSION 2.8,9)
project(learncpp)
enable_testing()

#Project Compiler Arguments
 if(APPLE)
    message( "-- Detected Apple/MacOS ( Skipping Coverage ) " )
 else()
    SET(PROJECT_COMPILER_FLAGS "-fprofile-arcs -ftest-coverage ")
    SET(PROJECT_LINK_FLAGS    "-lgcov")
 endif()
add_compile_options( -std=c++17 )

file(GLOB APP_SOURCES *.c**)
foreach(testsourcefile ${APP_SOURCES})
  get_filename_component(testname ${testsourcefile} NAME_WE)
  get_filename_component(baseDir ${testsourcefile} DIRECTORY)
  #message( ${testname} )
  set( TEST_IN  ${baseDir}/${testname}.in)
  #message( ${TEST_IN} )
  add_executable(${testname} ${testsourcefile})
  if ( EXISTS ${TEST_IN} )
    add_test( NAME ${testname} COMMAND "${testname} < ${TEST_IN}" )
  else()
    add_test( NAME ${testname} COMMAND "${testname}" )
  endif()
endforeach(testsourcefile ${APP_SOURCES})
